--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <aside class="category-sidebar">
         <div class="category-header">
-            <h4 class="category-title"><i class="fas fa-align-left"></i><span>categories</span></h4>
+            <h4 class="category-title"><i class="fas fa-align-left"></i><span>categories test</span></h4>
             <button class="category-close"><i class="icofont-close"></i></button>
         </div>
         <ul class="category-list">
