--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
                     <div class="navbar-content">
                         <ul class="navbar-list">
                             <li class="navbar-item">
-                                <a class="navbar-link" href="index.html">home</a>
+                                <a class="navbar-link" href="index.html">Home</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="navbar-link" href="shop.html">shop</a>
+                                <a class="navbar-link" href="shop.html">Shop</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="navbar-link" href="about.html">about us</a>
+                                <a class="navbar-link" href="about.html">About us</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="navbar-link" href="faq.html">faqs</a>
+                                <a class="navbar-link" href="faq.html">Faqs</a>
                             </li>
                             <li class="navbar-item dropdown">
-                                <a class="navbar-link" href="blog.html">blogs</a>
+                                <a class="navbar-link" href="blog.html">Blogs</a>
                             </li>
                             <li class="navbar-item">
-                                <a class="navbar-link" href="contact.html">contact us</a>
+                                <a class="navbar-link" href="contact.html">Contact us</a>
                             </li>
                         </ul>
                         <div class="navbar-info-group">
